frontend/test/should_fail/defYield_004e.grg
using defYield;

test t
{
	pp:p(--- yield x);
---
	def -x:EE->;
}

pattern p(--- def -x:EE->)
{
	-y:E1->;
---
	yield { yield x = y; }
}

